src/main/java/com/example/githubrepositoriesapi/infrastructure/error/UserNotFoundException.java
package com.example.githubrepositoriesapi.infrastructure.error;

public class UserNotFoundException extends RuntimeException {
    public UserNotFoundException(String message) {
        super(message);
    }
}
